# ml_pokemon

./: .gitignore  README.md  TO_DO.md  old_readme.md  prep_data.pkl  prepare_readme.py  pyproject.toml
.github/workflows/: update_readme.yml
artifacts/models/: 2026_04_21_w_stop_cat_native.joblib  2026_04_21_w_stop_cat_ordinal.joblib  2026_04_21_w_stop_light_gbm.joblib  2026_04_21_w_stop_summary.json  2026_04_22_cat_native.joblib  2026_04_22_cat_ordinal.joblib  2026_04_22_light_gbm.joblib  2026_04_22_summary.json  2026_04_22_w_stop_cat_native.joblib  2026_04_22_w_stop_cat_ordinal.joblib  2026_04_22_w_stop_light_gbm.joblib  2026_04_22_w_stop_summary.json
artifacts/predictions/: 2026_04_21_w_stop.csv  2026_04_22_preds.csv  2026_04_22_w_stop_preds.csv
artifacts/training/: metrics_data_2026_04_21_w_stop_cat_native.csv  metrics_data_2026_04_21_w_stop_cat_ordinal.csv  metrics_data_2026_04_21_w_stop_light_gbm.csv  metrics_data_2026_04_22_cat_native.csv  metrics_data_2026_04_22_cat_ordinal.csv  metrics_data_2026_04_22_light_gbm.csv  metrics_data_2026_04_22_w_stop_cat_native.csv  (+2 more)
configs/: tuning_easy.json  tuning_hard.json
datasets/: data_instructions.md  new_pokes.csv  pkdx_clean.csv  pkdx_min.csv  pkdx_raw.csv
documentation/: main.aux  main.out  main.tex  main.toc
figures/: create_type_plates.py
notebooks/: dist_general.ipynb  dist_stage.ipynb  dist_type.ipynb  dist_type_2.ipynb  explore_corr.ipynb  leaderboard_and_preds.ipynb  predictions.ipynb  split_correct.ipynb  test_pipe.ipynb  training_and_curves.ipynb
pokeml/: cli.py  constants.py
pokeml/data/: clean.py  (+4 more)
(+49 files in other folders)
